--- a/trainHelper.ipynb
+++ b/trainHelper.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "598a3f21",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
     "    sub = sub[i+2:]\n",
     "    # print(segment)\n",
     "    parsed.append(json.loads(segment.strip()))\n",
-    "skills = {val['id']:val['enname'] for val in parsed}\n",
+    "skills = {val['id']:val['name_en'] if 'name_en' in val else val['enname'] for val in parsed}\n",
     "json.dump(skills,open('skills.json','w'))"
    ]
   },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "68dea474",
    "metadata": {},
    "outputs": [],
@@ -173,6 +173,8 @@
     "            for stat in opt:\n",
     "                d = {}\n",
     "                for i,val in enumerate(stat):\n",
+    "                    if val is None:\n",
+    "                        continue\n",
     "                    k = m[i]\n",
     "                    d[k] = val\n",
     "                temp.append(d)\n",
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "501af9c5",
    "metadata": {},
    "outputs": [],
@@ -239,6 +241,8 @@
     "                for stat in opt:\n",
     "                    d = {}\n",
     "                    for i,val in enumerate(stat):\n",
+    "                        if val is None:\n",
+    "                            continue\n",
     "                        k = m[i]\n",
     "                        d[k] = val\n",
     "                    temp.append(d)\n",
