--- a/trainHelper.ipynb
+++ b/trainHelper.ipynb
@@ -280,14 +280,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "0c2b53ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "costumes = json.loads(open('skills_files/4054-ebea635d59210eb0.js').read().split('JSON.parse(')[1][1:-7].replace('\\\\',''))\n",
-    "costumes = {f\"{val['name_en']} ({val['version']})\" if 'version' in val else val['name_en'] : (val['char_id'],val['costume'], 'release_en' in val )  for val in costumes}\n",
-    "json.dump(costumes,open('costumes.json','w'))"
+    "costumes\n",
+    "# costumes = {f\"{val['name_en']} ({val['version']})\" if 'version' in val else val['name_en'] : (val['char_id'],val['costume'], 'release_en' in val )  for val in costumes}\n",
+    "# json.dump(costumes,open('costumes.json','w'))"
    ]
   },
   {
@@ -348,6 +349,68 @@
     "        \n",
     "    return (start_idx,end_idx)\n",
     "getGameArea(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "4e3b3722",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grass Wonder [1011, 101101, True]\n",
+      "Grass Wonder (fantasy) [1011, 101116, False]\n",
+      "Grass Wonder (new_year) [1011, 101102, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "costumes = json.load(open('costumes.json'))\n",
+    "for k,v in costumes.items():\n",
+    "    if 1011 in v:\n",
+    "        print(k,v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "89034e8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1008\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "d = json.load(open('traineeEvents.json'))\n",
+    "for k,v in d.items():\n",
+    "    if 'Awkward Honesty' in v:\n",
+    "        print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "49c5086d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "f = 'skills_files/2080-e05eb4f5931ef54c.js'\n",
+    "text = open(f).read()\n",
+    "sub = text.split('JSON.parse(')[3][1:-45]\n",
+    "sub\n",
+    "parsed = json.loads(sub.replace('\\\\',''))\n",
+    "d = {val['id']:val['name_en'] if 'name_en' in val else val['name_jp'] for val in parsed}\n",
+    "json.dump(d,open('races.json','w'))"
    ]
   }
  ],
