fix start menu launch

--- a/trainHelper.ipynb
+++ b/trainHelper.ipynb
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "bf67ec62",
    "metadata": {},
    "outputs": [
@@ -558,6 +558,17 @@
       "[8, [['それぞれの“食”', [['カツラギエース', [['sl', None, 1104], ['sk', '+1', 201261], ['nl'], ['nsl'], ['sk', '+1', 201262]]], ['スペシャルウィーク', [['sl', None, 1001], ['sk', '+1', 201351], ['nl'], ['nsl'], ['sk', '+1', 201352]]], ['ニシノフラワー', [['sl', None, 1051], ['sk', '+1', 200361], ['nl'], ['nsl'], ['sk', '+1', 200362]]], ['ヒシアケボノ', [['sl', None, 1028], ['sk', '+1', 203011], ['nl'], ['nsl'], ['sk', '+1', 203012]]], ['ライスシャワー', [['sl', None, 1030], ['sk', '+1', 201341], ['nl'], ['nsl'], ['sk', '+1', 201342]]], ['秋川理事長', [['sl', None, 9002], ['sk', '+1', 203021], ['nl'], ['nsl'], ['sk', '+1', 203022]]]], [101, 'それぞれの“食”'], [102, '各自的「食物」']]], []]\n",
       "[9, [['4.1 研究レポートの配布', [['ビワハヤヒデ', [['sl', None, 1023], ['sk', '+1', 203301], ['nl'], ['nsl'], ['sk', '+1', 203302]]], ['ナリタタイシン', [['sl', None, 1050], ['sk', '+1', 201453], ['nl'], ['nsl'], ['sk', '+1', 201452]]], ['エアシャカール', [['sl', None, 1036], ['sk', '+1', 200331], ['nl'], ['nsl'], ['sk', '+1', 200332]]], ['シンボリクリスエス', [['sl', None, 1083], ['sk', '+1', 200591], ['nl'], ['nsl'], ['sk', '+1', 200592]]], ['タニノギムレット', [['sl', None, 1084], ['sk', '+1', 203311], ['nl'], ['nsl'], ['sk', '+1', 203312]]], ['ライツ博士', [['sk', '+1', 200721]]]]]], []]\n",
       "[10, [['“私の”レースのこと', [['オルフェーヴル', [['sl', None, 1115], ['sk', '+1', 202901], ['nl'], ['nsl'], ['sk', '+1', 202902]]], ['メジロラモーヌ', [['sl', None, 1086], ['sk', '+1', 202501], ['nl'], ['nsl'], ['sk', '+1', 202502]]], ['ジェンティルドンナ', [['sl', None, 1116], ['sk', '+1', 201103], ['nl'], ['nsl'], ['sk', '+1', 201102]]], ['シリウスシンボリ', [['sl', None, 1070], ['sk', '+1', 202471], ['nl'], ['nsl'], ['sk', '+1', 202472]]], ['スマートファルコン', [['sl', None, 1046], ['sk', '+1', 203101], ['nl'], ['nsl'], ['sk', '+1', 203103]]], ['レジェンドたち', [['sl', None, 30241], ['sk', '+1', 202801], ['nl'], ['nsl'], ['sk', '+1', 202802]]]]]], []]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
