code for rescraping gametora

--- a/trainHelper.ipynb
+++ b/trainHelper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8bb37ec1",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "77710266",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "15bdd9b5",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 26%|██▋       | 125/474 [00:00<00:00, 989.88it/s]\n"
+      " 26%|██▋       | 125/474 [00:00<00:00, 912.57it/s]\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "911ec057",
    "metadata": {},
    "outputs": [],
@@ -120,22 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "315b0efe",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[48], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m----> 9\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m\n\u001b[0;32m     12\u001b[0m matches \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39mfinditer(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mJSON\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.parse\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m(([\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\'\u001b[39;00m\u001b[38;5;124m])(.*?)\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m, payload, re\u001b[38;5;241m.\u001b[39mDOTALL)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m val \u001b[38;5;129;01min\u001b[39;00m matches:\n",
-      "\u001b[1;31mValueError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for f in os.listdir(jsFolder):\n",
     "    if '.js' not in f:\n",
@@ -261,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0c2b53ea",
    "metadata": {},
    "outputs": [],
@@ -274,12 +262,15 @@
     "\n",
     "        costumes = json.loads(t.split('JSON.parse(')[1][1:-7].replace('\\\\',''))\n",
     "        costumes = {f\"{val['name_en']} ({val['version']})\" if 'version' in val else val['name_en'] : (val['char_id'],val['costume'], 'release_en' in val )  for val in costumes}\n",
-    "        json.dump(costumes,open('costumes.json','w'))"
+    "        json.dump(costumes,open('costumes.json','w'))\n",
+    "        break\n",
+    "else:\n",
+    "    raise ValueError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e848e14d",
    "metadata": {},
    "outputs": [],
@@ -293,12 +284,15 @@
     "\n",
     "        parsed = json.loads(sub.replace('\\\\',''))\n",
     "        d = {val['char_id']:val['en_name'] if 'en_name' in val else val['jp_name'] for val in parsed}\n",
-    "        json.dump(d,open('charIds.json','w'))"
+    "        json.dump(d,open('charIds.json','w'))\n",
+    "        break\n",
+    "else:\n",
+    "    raise ValueError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "49c5086d",
    "metadata": {},
    "outputs": [
@@ -306,13 +300,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7110-04b9fb893c606585.js\n"
+      "_next_static_chunks_7110-04b9fb893c606585.js.js\n"
      ]
     }
    ],
    "source": [
     "for f in os.listdir(jsFolder):\n",
-    "    if '.js' not in f:\n",
+    "    if not f.endswith('.js'):\n",
     "        continue\n",
     "    text = open(os.path.join(jsFolder,f)).read()\n",
     "    if 'hanshin-juvenile' not in text:\n",
@@ -322,7 +316,10 @@
     "    parsed = json.loads(findEnd(sub.replace('\\\\','')))\n",
     "    d = {val['id']:val['name_en'] if 'name_en' in val else val['name_jp'] for val in parsed}\n",
     "    # print(d)\n",
-    "    json.dump(d,open('races.json','w'))"
+    "    json.dump(d,open('races.json','w'))\n",
+    "    break\n",
+    "else:\n",
+    "    raise ValueError"
    ]
   },
   {
